Added content for kittens, fixed errors in markup

--- a/females.html
+++ b/females.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-<head
+<head>
 <meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
 <title>Devon Rex Ireland | Females</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -92,13 +92,13 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>"Hanna" ROGUS Bessie Basse</h1>
+		<h1>ROGUS Bessie Basset (Hanna)</h1>
 		<ul>
 			<li><span class="label">Sire:</span> Rogus Willybonka</li>
 			<li><span class="label">Dam:</span> Rexintons She Bangz </li>
 			<li><span class="label">DoB:</span> 13 Mar 2011</li>
 			<li><span class="label">Color:</span> Cream</li>
-			<li><span class="label">Blood Type:</span></li>
+			<li><span class="label">Blood Type: B</span></li>
 		</ul>
 	</div>
 </div>
@@ -113,13 +113,13 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>"Nina" Rogus Mamma Cass</h1>
+		<h1> Rogus Mamma Cass (Nina)</h1>
 		<ul>
 			<li><span class="label">Sire:</span> Rexellence Willy-Ornot/li>
 			<li><span class="label">Dam:</span> Rogus Rosy Poppet</li>
 			<li><span class="label">DoB:</span> 01 Apr 2011</li>
 			<li><span class="label">Color:</span> Black Smoke</li>
-			<li><span class="label">Blood Type:</span></li>
+			<li><span class="label">Blood Type: B </span></li>
 		</ul>
 	</div>
 </div>
@@ -134,13 +134,13 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>"Lola" Rogus Maggie-May</h1>
+		<h1> Rogus Maggie-May (Lola)</h1>
 		<ul>
 			<li><span class="label">Father:</span> Rogus Willybonka</li>
 			<li><span class="label">Mother:</span> Rexintons She Bangz</li>
 			<li><span class="label">DoB:</span> 13 Mar 2011</li>
 			<li><span class="label">Color:</span> Crea-white</li>
-			<li><span class="label">Blood Type:</span> </li>
+			<li><span class="label">Blood Type: B</span> </li>
 		</ul>
 	</div>
 </div>
