--- a/kittens.html
+++ b/kittens.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-<head
+<head>
 <meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
 <title>Devon Rex Ireland | Kittens</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -20,12 +20,10 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
-</script></head>
-
+</script>
+</head>
 <body>
 <div id="main">
-<!-- anythink in the body is displayed on the webpage-->
-<!-- need to put in the picture and logo on top of the table-->
 <div id="header-wrap">
 <div id="header-container">
 <table id="banner" border="0">
@@ -47,12 +45,68 @@
 </div>
 
 <div id="content">
-<!--Devon Rex_photo-->
-<img src="images/fenix.jpg"alt="Eclare" width="400" height="400" align="left" style="margin-right:20px" />
-<p> Fenix is availible cat born on 21.12.21 <br/>
-mam is Lola, dad is Panic<br/>
-color is nice, and two eyes</p>
-
+<p>
+	<a href="males.html#panek">PL* Agumbamka Domalien (Panek)</a> and 
+	<a href="females.html#lola">Rogus Maggie-May (Lola)</a> are expecting babies
+	in 3 weeks.
+	Keep up to date by following us on <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_parent">Facebook</a> 
+	or contact us by <a href="mailto:info@celticelfes.com">email</a> for more
+	information.
+</p>
+<div class="litter">
+<h1>Panek and Nina</h1>	
+<p>Panek and Nina had Flash and Fenix on 21 Jun 2012.</p>
+<div class="gallery">
+<div class="col1">
+	<img src="kittens/panek-nina.jpg"/>
+	<div class="caption">Fenix &amp; <a href="males.html#flash">Flash</a></div>
+</div>
+<div class="col3">
+	<img src="kittens/fenix.jpg"/>
+	<div class="caption">Fenix</div>
+</div>
+<div class="col2">
+	<img src="kittens/flash.jpg"/>
+	<div class="caption"><a href="males.html#flash">Flash</a></div>
+</div>
+</div>
+</div>
+<div class="litter">
+<h1>Panek and Nina</h1>	
+<p>Panek and Hanna had Eclaire and Eclipse on 7 Jun 2012.</p>
+<div class="gallery">
+<div class="col1">
+	<img src="kittens/panek-hanna.jpg"/>
+	<div class="caption">Eclaire &amp; Eclipse</div>
+</div>
+<div class="col3">
+	<img src="kittens/eclaire.jpg"/>
+	<div class="caption"><a href="males.html#eclaire">Eclaire</a></div>
+</div>
+<div class="col2">
+	<img src="kittens/eclips.JPG"/>
+	<div class="caption">Eclipse</div>
+</div>
+</div>
+</div>
+<div class="litter">
+<h1>Panek and Lola</h1>
+<p>Panek and Lola had Disel and Domingo on 3 April 2012</p>
+<div class="gallery">
+<div class="col1">
+    <img src="kittens/panek-lola.jpg"/>
+	<div class="caption">Disel and Domingo</div>
+</div>
+<div class="col3">
+<img src="kittens/domingo.jpg"/>
+	<div class="caption">Domingo</div>
+</div>
+<div class="col2">
+<img src="kittens/dyzel.jpg"/>
+	<div class="caption">Disel</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer-container">
 <div id="footer">
