--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-<head
+<head>
 <meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
 <title>Devon Rex Ireland | Gallery</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
