--- a/males.html
+++ b/males.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-<head
+<head>
 <meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
 <title>Devon Rex Ireland | Males</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -136,7 +136,7 @@ $(function() {
 	</div>
 	<div class="bio">
 		<h1>Flash</h1>
-		<ul
+		<ul>
 			<li><span class="label">Sire:</span> <a href="#panek">PL* Agubamka Domalien (Panek)</a></li>
 			<li><span class="label">Dam:</span> <a href="females.html#nina">"Nina" Rogus Mamma Cass</a></li>
 			<li><span class="label">DoB:</span> 21 Jun 2012</li>
