--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,9 @@
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
 
+<script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="galleria/galleria-1.2.8.min.js"></script>
+
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -20,6 +23,11 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
+</script>
+
+<script type="text/javascript">
+    Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
+    Galleria.run('#galleria');
 </script>
 
 </head>
@@ -49,19 +57,15 @@
 </div>
 
 <div id="content">
-<div class="picture">
-<img src="gallery_1.jpg"alt="Eclare"/>
-<p style="color:#F0E68C" "font-size:30px">
-catcat cat catcat cat catcat cat catcat cat cat 10.10.2010</p>
+
+<div id="galleria">
+    <img src="kittens/Domingo.JPG" />
+    <img src="kittens/Dyzel.JPG" />
+    <img src="kittens/eclaire.jpg" />
 </div>
-<div class="picture">
-<img src="gallery_1.jpg"alt="Eclare"/>
-<p style="color:#F0E68C;font-size:30px"> dog dog dog </p>
-</div>
-</div>
-<div class="picture">
 
 </div>
+
 <div id="footer-container">
 <div id="footer">
 <table>
