Updating home page text and pictures

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 <p>
 <h3 style="margin-left:400px"> <a href="#dr">Devon Rex</a> </h3>
 <img src="images/eclare.jpg"alt="Eclare" width="400" height="400" align="left" style="margin-right:20px" />
-Hi, Im Erica Lastauskiene.<br/>
-I live in a pretty village on the east coast of Ireland, near the sea.<br/>
+Hi, Im Erica.<br/>
+I live on the east coast of Ireland,  in a pretty village near the sea.<br/>
 My interest in cats began four years ago. I always loved pets. I used to have dogs, but my partner developed an allergy to them, therefore we had to give the dogs to my parents. Understandably we were upset to let the dogs go.<br/>
 I decided to investigate what alternative pet options we might have. <br/>
 We discovered a hairless Canadian Sphynx cat, which completely stole our hearts!!!!<br/>
- We had our first Sphinx and she performed very well                 in shows...<br/>
+ We had our first Sphynx and she performed very well                 in shows...<br/>
 <img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" />
  However, at one particular show I was stopped in my tracks, when there appeared before me a little miracle!!!<br/>
 A little Elfe with big eyes, big ears, nice curly coat was looking at me.<br/>
