--- a/females.html
+++ b/females.html
@@ -92,7 +92,7 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>ROGUS Bessie Basset (Hanna)</h1>
+		<h3>Rogus Bessie Basset (Hanna)</h3>
 		<ul>
 			<li><span class="label">Sire:</span> Rogus Willybonka</li>
 			<li><span class="label">Dam:</span> Rexintons She Bangz </li>
@@ -113,7 +113,7 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1> Rogus Mamma Cass (Nina)</h1>
+		<h3>Rogus Mamma Cass (Nina)</h3>
 		<ul>
 			<li><span class="label">Sire:</span> Rexellence Willy-Ornot/li>
 			<li><span class="label">Dam:</span> Rogus Rosy Poppet</li>
@@ -134,7 +134,7 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1> Rogus Maggie-May (Lola)</h1>
+		<h3>Rogus Maggie-May (Lola)</h3>
 		<ul>
 			<li><span class="label">Father:</span> Rogus Willybonka</li>
 			<li><span class="label">Mother:</span> Rexintons She Bangz</li>
