Changes requested by Erika
Corrected spelling of Erika
Removed picture from Litter E because it was the wrong cats
Fixed the heading for Litter D

--- a/kittens.html
+++ b/kittens.html
@@ -72,12 +72,12 @@
 </div>
 </div>
 <div class="litter">
-<h1>Panek and Nina</h1>	
+<h1>Panek and Hanna</h1>	
 <p>Panek and Hanna had Eclaire and Eclipse on 7 Jun 2012.</p>
 <div class="gallery">
 <div class="col1">
-	<img src="kittens/panek-hanna.jpg"/>
-	<div class="caption">Eclaire &amp; Eclipse</div>
+	<!--img src="kittens/panek-hanna.jpg"/>
+	<div class="caption">Eclaire &amp; Eclipse</div-->
 </div>
 <div class="col3">
 	<img src="kittens/eclaire.jpg"/>
@@ -94,15 +94,15 @@
 <p>Panek and Lola had Disel and Domingo on 3 April 2012</p>
 <div class="gallery">
 <div class="col1">
-    <img src="kittens/panek-lola.jpg"/>
+    <img src="kittens/Panek-Lola.JPG"/>
 	<div class="caption">Disel and Domingo</div>
 </div>
 <div class="col3">
-<img src="kittens/domingo.jpg"/>
+<img src="kittens/Domingo.JPG"/>
 	<div class="caption">Domingo</div>
 </div>
 <div class="col2">
-<img src="kittens/dyzel.jpg"/>
+<img src="kittens/Dyzel.JPG"/>
 	<div class="caption">Disel</div>
 </div>
 </div>
