--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <p>
 <h3 style="margin-left:400px"> <a href="#dr">Devon Rex</a> </h3>
 <img src="images/eclare.jpg"alt="Eclare" width="400" height="400" align="left" style="margin-right:20px" />
-Hi, Im Erica.<br/>
+Hi, I'm Erika.<br/>
 I live on the east coast of Ireland,  in a pretty village near the sea.<br/>
 My interest in cats began four years ago. I always loved pets. I used to have dogs, but my partner developed an allergy to them, therefore we had to give the dogs to my parents. Understandably we were upset to let the dogs go.<br/>
 I decided to investigate what alternative pet options we might have. <br/>
