--- a/gallery.html
+++ b/gallery.html
@@ -69,16 +69,18 @@
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr style="background-color:#333; font-size:10px; height:15px">
+<tr style="background-color:#333; font-size:15px; height:15px">
 
 <!-- anchor to top of page -->
 <td>&copy; 2012 Celtic Elfes</td>
-<td>No border around the image, but still a link:
-<a href="http://www.facebook.com/#!/lastauskiene?fref=ts">
-<img border="0" src="fb.jpg" alt="FB" width="32" height="32"></a>
-
+<td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
+Send mail to us</a></td>
+<td>
+<a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
+<img border="0" src="images/fb.jpg" alt="FB" />
+</a>
 </td>
-<!--fb button-->
 <td align="right">Designed by alien_masha</td>
 </tr>
 
