--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ We discovered a hairless Canadian Sphynx cat, which completely stole our hearts!
 <img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" />
  However, at one particular show I was stopped in my tracks, when there appeared before me a little miracle!!!<br/>
 A little Elfe with big eyes, big ears, nice curly coat was looking at me.<br/>
-I sad: "Oh, my God! Who is that?!"<br/>
+I said: "Oh, my God! Who is that?!"<br/>
 Since that day we began our adventure with the
 Devon Rex
 breed - we commenced our search for a kitten...<br/>
@@ -93,11 +93,11 @@ The Devon Rex is a faithful companion and will usually follow the object of thei
 <!-- anchor to top of page -->
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
-<a href="mailto:info@celticelfes.com?Subject=Devon%20Rex">
-Send Mail</a></td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
+Send mail to us</a></td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
-<img border="0" src="images/fb.jpg" alt="FB" width="20" height="20" />
+<img border="0" src="images/fb.jpg" alt="FB" />
 </a>
 </td>
 <td align="right">Designed by alien_masha</td>
@@ -108,6 +108,4 @@ Send Mail</a></td>
 </div>
 </div>
 </body>
-
-
 </html>
