--- a/kittens.html
+++ b/kittens.html
@@ -45,13 +45,15 @@
 </div>
 
 <div id="content">
+<img src="kittens/top.jpg" style="padding-left:320px"/>
+<p style="text-align: center">
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">Mail to us about availible kittens</a>
+</p>
 <p>
 	<a href="males.html#panek">PL* Agumbamka Domalien (Panek)</a> and 
 	<a href="females.html#lola">Rogus Maggie-May (Lola)</a> are expecting babies
 	in 3 weeks.
 	Keep up to date by following us on <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_parent">Facebook</a> 
-	or contact us by <a href="mailto:info@celticelfes.com">email</a> for more
-	information.
 </p>
 <div class="litter">
 <h1>Panek and Nina</h1>	
@@ -76,8 +78,8 @@
 <p>Panek and Hanna had Eclaire and Eclipse on 7 Jun 2012.</p>
 <div class="gallery">
 <div class="col1">
-	<!--img src="kittens/panek-hanna.jpg"/>
-	<div class="caption">Eclaire &amp; Eclipse</div-->
+<!--	<img src="kittens/panek-hanna.jpg"/>
+	<div class="caption">Eclaire &amp; Eclipse</div> -->
 </div>
 <div class="col3">
 	<img src="kittens/eclaire.jpg"/>
@@ -94,15 +96,15 @@
 <p>Panek and Lola had Disel and Domingo on 3 April 2012</p>
 <div class="gallery">
 <div class="col1">
-    <img src="kittens/Panek-Lola.JPG"/>
+    <img src="kittens/panek-lola.jpg"/>
 	<div class="caption">Disel and Domingo</div>
 </div>
 <div class="col3">
-<img src="kittens/Domingo.JPG"/>
+<img src="kittens/domingo.jpg"/>
 	<div class="caption">Domingo</div>
 </div>
 <div class="col2">
-<img src="kittens/Dyzel.JPG"/>
+<img src="kittens/dyzel.jpg"/>
 	<div class="caption">Disel</div>
 </div>
 </div>
@@ -111,13 +113,16 @@
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr style="background-color:#333; font-size:10px; height:15px">
+<tr style="background-color:#333; font-size:15px; height:15px">
 
 <!-- anchor to top of page -->
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
+Send mail to us</a></td>
+<td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
-<img border="0" src="fb.jpg" alt="FB" width="32" height="32" />
+<img border="0" src="images/fb.jpg" alt="FB" />
 </a>
 </td>
 <td align="right">Designed by alien_masha</td>
@@ -128,6 +133,4 @@
 </div>
 </div>
 </body>
-
-
 </html>
