--- a/females.html
+++ b/females.html
@@ -149,13 +149,16 @@ $(function() {
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr style="background-color:#333; font-size:15px; height:17px">
+<tr style="background-color:#333; font-size:15px; height:15px">
 
 <!-- anchor to top of page -->
-<td>&copy; 2012 	Celtic Elfes</td>
+<td>&copy; 2012 Celtic Elfes</td>
+<td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
+Send mail to us</a></td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
-<img border="0" src="images/fb.jpg" alt="FB" width="32" height="32" />
+<img border="0" src="images/fb.jpg" alt="FB" />
 </a>
 </td>
 <td align="right">Designed by alien_masha</td>
