Resolved merge conflicts

--- a/gallery.html
+++ b/gallery.html
@@ -59,9 +59,20 @@
 <div id="content">
 
 <div id="galleria">
-    <img src="kittens/Domingo.JPG" />
-    <img src="kittens/Dyzel.JPG" />
-    <img src="kittens/eclaire.jpg" />
+    <img src="gallery/fun1.JPG" />
+    <img src="gallery/fun2.jpg" />
+    <img src="gallery/fun3.jpg" />
+    <img src="gallery/fun4.JPG" />
+    <img src="gallery/fun5.JPG" />
+    <img src="gallery/fun6.JPG" />
+    <img src="gallery/fun7.JPG" />
+    <img src="gallery/fun8.jpg" />
+    <img src="gallery/fun9.jpg" />
+    <img src="gallery/fun10.jpg" />
+    <img src="gallery/fun11.jpg" />
+    <img src="gallery/fun12.jpg" />
+    <img src="gallery/fun13.jpg" />
+    <img src="gallery/fun14.jpg" />
 </div>
 
 </div>
@@ -92,5 +103,3 @@ Send mail to us</a></td>
 
 
 </html>
-
-</body>
