--- a/kittens.html
+++ b/kittens.html
@@ -78,8 +78,9 @@
 <p>Panek and Hanna had Eclaire and Eclipse on 7 Jun 2012.</p>
 <div class="gallery">
 <div class="col1">
-<!--	<img src="kittens/panek-hanna.jpg"/>
-	<div class="caption">Eclaire &amp; Eclipse</div> -->
+	<!--
+	<img src="kittens/panek-hanna.jpg"/>
+	<div class="caption">Eclaire &amp; Eclipse</div>-->
 </div>
 <div class="col3">
 	<img src="kittens/eclaire.jpg"/>
