Footer now uses CSS for styling Changed the title and description to improve SEO

--- a/kittens.html
+++ b/kittens.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
-<title>Devon Rex Ireland | Kittens</title>
+<meta name="description" content="Breeder of pedigree Devon Rex cats in Ireland" />
+<title>Celticelfes Kittens | Pedigree Devon Rex kittens for sale in Ireland</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -56,7 +56,7 @@
 	Keep up to date by following us on <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_parent">Facebook</a> 
 </p>
 <div class="litter">
-<h1>Panek and Nina</h1>	
+<h3>Panek and Nina</h3>	
 <p>Panek and Nina had Flash and Fenix on 21 Jun 2012.</p>
 <div class="gallery">
 <div class="col1">
@@ -74,7 +74,7 @@
 </div>
 </div>
 <div class="litter">
-<h1>Panek and Hanna</h1>	
+<h3>Panek and Hanna</h3>	
 <p>Panek and Hanna had Eclaire and Eclipse on 7 Jun 2012.</p>
 <div class="gallery">
 <div class="col1">
@@ -93,7 +93,7 @@
 </div>
 </div>
 <div class="litter">
-<h1>Panek and Lola</h1>
+<h3>Panek and Lola</h3>
 <p>Panek and Lola had Disel and Domingo on 3 April 2012</p>
 <div class="gallery">
 <div class="col1">
@@ -111,16 +111,14 @@
 </div>
 </div>
 </div>
+
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr style="background-color:#333; font-size:15px; height:15px">
-
-<!-- anchor to top of page -->
+<tr>
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
-<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
-Send mail to us</a></td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">Send mail to us</a></td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
 <img border="0" src="images/fb.jpg" alt="FB" />
@@ -128,10 +126,10 @@ Send mail to us</a></td>
 </td>
 <td align="right">Designed by alien_masha</td>
 </tr>
-
 </table>
 </div>
 </div>
+
 </div>
 </body>
 </html>
