--- a/females.html
+++ b/females.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
-<title>Devon Rex Ireland | Females</title>
+<meta name="description" content="Breeder of pedigree Devon Rex cats in Ireland" />
+<title>Celticelfes Dams | Pedigree Devon Rex kittens for sale in Ireland</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -149,13 +149,10 @@ $(function() {
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr style="background-color:#333; font-size:15px; height:15px">
-
-<!-- anchor to top of page -->
+<tr>
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
-<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
-Send mail to us</a></td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">Send mail to us</a></td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
 <img border="0" src="images/fb.jpg" alt="FB" />
