--- a/gallery.html
+++ b/gallery.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta name="description" content="Breeder of pedigree Devon Rex cats in Ireland" />
-<title>Celticelfes Gallery | Pedigree Devon Rex kittens for sale in Ireland</title>
+<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
+<title>Devon Rex Ireland | Gallery</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -59,6 +59,8 @@
 <div id="content">
 
 <div id="galleria">
+	<img src="gallery/fun0.JPG" />
+	<img src="gallery/fun00.JPG" />
     <img src="gallery/fun1.JPG" />
     <img src="gallery/fun2.jpg" />
     <img src="gallery/fun3.jpg" />
@@ -73,6 +75,13 @@
     <img src="gallery/fun12.jpg" />
     <img src="gallery/fun13.jpg" />
     <img src="gallery/fun14.jpg" />
+    <img src="gallery/fun15.JPG" />   
+    <img src="gallery/fun16.JPG" />
+	<img src="gallery/fun17.JPG" />   
+	<img src="gallery/fun18.JPG" />   
+	<img src="gallery/fun19.JPG" />   
+	<img src="gallery/fun21.JPG" />   
+	<img src="gallery/fun22.JPG" />
 </div>
 
 </div>
@@ -80,10 +89,13 @@
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr>
+<tr style="background-color:#333; font-size:15px; height:15px">
+
+<!-- anchor to top of page -->
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
-<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">Send mail to us</a></td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
+Send mail to us</a></td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
 <img border="0" src="images/fb.jpg" alt="FB" />
@@ -91,12 +103,14 @@
 </td>
 <td align="right">Designed by alien_masha</td>
 </tr>
+
 </table>
 </div>
 </div>
-
 </div>
 </body>
 
 
 </html>
+
+</body>
