--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta name="description" content="Breeder of pedigree Devon Rex cats in Ireland" />
-<title>Celticelfes | Pedigree Devon Rex kittens for sale in Ireland</title>
+<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
+<title>Devon Rex Ireland</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -25,6 +25,15 @@
 </head>
 
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div id="main">
 <!-- anythink in the body is displayed on the webpage-->
 <!-- need to put in the picture and logo on top of the table-->
@@ -55,7 +64,7 @@
 <h3 style="margin-left:400px"> <a href="#dr">Devon Rex</a> </h3>
 <img src="images/eclare.jpg"alt="Eclare" width="400" height="400" align="left" style="margin-right:20px" />
 Hi, I'm Erika.<br/>
-I live on the east coast of Ireland,  in a pretty village near the sea.<br/>
+I live on the east coast of Ireland, in a pretty village near the sea.<br/>
 My interest in cats began four years ago. I always loved pets. I used to have dogs, but my partner developed an allergy to them, therefore we had to give the dogs to my parents. Understandably we were upset to let the dogs go.<br/>
 I decided to investigate what alternative pet options we might have. <br/>
 We discovered a hairless Canadian Sphynx cat, which completely stole our hearts!!!!<br/>
@@ -71,6 +80,25 @@ Since Lola (our first kitten) arrived, I realised that one would not be enough.<
 <img src="images/faraon.jpg"alt="Faraon" width="400" height="400" align="left" style="margin-right:20px" />
 Devon Rex became our family obsession.<br/>
 They have become a part of our family and are loved by everyone. They are happy, healthy, playful and they are a joy to all.<br/>
+<h5>Pedigree Devon Rex kittens for sale</h5>
+We will have pedigree Devon Rex kittens available for sale. Our next litter is due
+in mid-December.
+<ul>
+	<li>Available after they reach 12 weeks old</li>
+	<li>Have been vaccinated for:
+		<ul>
+			<li>Feline Panleucopenia Virus (FPV)</li>
+		 	<li>Feline Calicivirus (FCV)</li>
+		 	<li>Feline Herpesvirus 1 (FVH-1)</li>
+		</ul>
+	</li>
+	<li>Have been de-wormed and are microchipped</li>
+	<li>Come with 12 weeks free <a href="http://www.allianz.ie/pet-insurance/">Allianz pet insurance</a></li>
+	<li>Are registered with <a href="http://www.gccfi.com/">The Governing Council of the Cat Fancy of Ireland</a></li>
+	<li>3 generation pedigree form is available upon request</li>
+</ul>
+<p>Contact us by e-mail at <a href="mailto:info@celticelfes.com">info@celticelfes.com</a> to inquire about
+availability and pricing.</p>
 <h5><a name="dr">Devon Rex</a></h5>
  <p>A bit about Devon Rex breed:<br/>
  The Devon Rex is a breed of cat with a curly, very soft short coat similar to that of the Cornish Rex. They are often associated with being one of the most hypo-allergenic cats available because of their type of coat.
@@ -87,22 +115,26 @@ The Devon Rex is a faithful companion and will usually follow the object of thei
 </div>
 <div id="footer-container">
 <div id="footer">
+	<div class="fb-like" data-href="http://www.celticelfes.com" data-send="true" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
 <table>
-<tr>
+<tr style="background-color:#333; font-size:15px; height:15px">
+
+<!-- anchor to top of page -->
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
-<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">Send mail to us</a></td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
+Send mail to us</a></td>
 <td>
-<a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
-<img border="0" src="images/fb.jpg" alt="FB" />
-</a>
+<div class="fb-like" data-href="http://www.celticelfes.com" data-send="true" data-width="450" data-show-faces="true"></div>
 </td>
 <td align="right">Designed by alien_masha</td>
 </tr>
+
 </table>
 </div>
 </div>
-
 </div>
 </body>
+
+
 </html>
