--- a/males.html
+++ b/males.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta name="description" content="Breeder of pedigree Devon Rex cats in Ireland" />
-<title>Celticelfes Sires | Pedigree Devon Rex kittens for sale in Ireland</title>
+<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
+<title>Devon Rex Ireland | Males</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -96,10 +96,17 @@ $(function() {
 		<h3>PL* Agubamka Domalien (Panek)</h3>
 		<ul>
 			<li><span class="label">Sire:</span> Alexandroff Phocus-Pocus</li>
-			<li><span class="label">Dam:</span> Bijou Arnikor*PL </li>
+			<li><span class="label">Dam:</span> Bijou Arnikor*PL</li>
 			<li><span class="label">DoB:</span> 2 Oct 2010</li>
 			<li><span class="label">Color:</span> Red Bi-Colour</li>
 			<li><span class="label">Blood Type:</span> B</li>
+		</ul>
+		<h4>Show Results</h4>
+		<ul>
+			<li>EX1 - FIFE, February 2011</li>
+			<li>EX1, NOM BIS - FIFE, Febrauary 2011</li>
+			<li>Challenge Certificate (GCCFI) - SABCCI, October 2011</li>
+			<li>Challenge Certificate (GCCFI) - Midland Cat Club, February 2012</li>
 		</ul>
     </div>
 </div>
@@ -147,14 +154,16 @@ $(function() {
 </div>
 
 </div>
-
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr>
+<tr style="background-color:#333; font-size:15px; height:15px">
+
+<!-- anchor to top of page -->
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
-<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">Send mail to us</a></td>
+<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
+Send mail to us</a></td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
 <img border="0" src="images/fb.jpg" alt="FB" />
@@ -162,10 +171,10 @@ $(function() {
 </td>
 <td align="right">Designed by alien_masha</td>
 </tr>
+
 </table>
 </div>
 </div>
-
 </div>
 </body>
 
