Updated title and description Updated CSS Added facebook like button

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
-<title>Devon Rex Ireland</title>
+<meta name="description" content="Breeder of pedigree Devon Rex cats in Ireland" />
+<title>Celticelfes | Pedigree Devon Rex kittens for sale in Ireland</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -44,6 +44,7 @@
 <tr>
 <th id="logo"><img src="images/banner.jpg"/> </th>
 <th id="picture"><img src="images/kittens_green.jpg" alt="CelticElfes"/></th>
+<th id="like"><div class="fb-like" data-href="http://www.celticelfes.com" data-send="true" data-layout="box_count" data-width="55" data-show-faces="false" data-font="arial" data-colorscheme="dark"></div></th>
 </tr>
 </table>
 <table id="menu" border="1">
@@ -64,11 +65,11 @@
 <h3 style="margin-left:400px"> <a href="#dr">Devon Rex</a> </h3>
 <img src="images/eclare.jpg"alt="Eclare" width="400" height="400" align="left" style="margin-right:20px" />
 Hi, I'm Erika.<br/>
-I live on the east coast of Ireland, in a pretty village near the sea.<br/>
+I live in a pretty village by the sea on the east coast of Ireland.<br/>
 My interest in cats began four years ago. I always loved pets. I used to have dogs, but my partner developed an allergy to them, therefore we had to give the dogs to my parents. Understandably we were upset to let the dogs go.<br/>
 I decided to investigate what alternative pet options we might have. <br/>
 We discovered a hairless Canadian Sphynx cat, which completely stole our hearts!!!!<br/>
- We had our first Sphynx and she performed very well                 in shows...<br/>
+ We had our first Sphynx and she performed very well in shows...<br/>
 <img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" />
  However, at one particular show I was stopped in my tracks, when there appeared before me a little miracle!!!<br/>
 A little Elfe with big eyes, big ears, nice curly coat was looking at me.<br/>
@@ -81,10 +82,11 @@ Since Lola (our first kitten) arrived, I realised that one would not be enough.<
 Devon Rex became our family obsession.<br/>
 They have become a part of our family and are loved by everyone. They are happy, healthy, playful and they are a joy to all.<br/>
 <h5>Pedigree Devon Rex kittens for sale</h5>
-We will have pedigree Devon Rex kittens available for sale. Our next litter is due
-in mid-December.
+<p>
+We have pedigree Devon Rex kittens available for sale. Our next litter is due
+in mid-December. All our kittens:
 <ul>
-	<li>Available after they reach 12 weeks old</li>
+	<li>Are available after they reach 12 weeks old</li>
 	<li>Have been vaccinated for:
 		<ul>
 			<li>Feline Panleucopenia Virus (FPV)</li>
@@ -97,7 +99,7 @@ in mid-December.
 	<li>Are registered with <a href="http://www.gccfi.com/">The Governing Council of the Cat Fancy of Ireland</a></li>
 	<li>3 generation pedigree form is available upon request</li>
 </ul>
-<p>Contact us by e-mail at <a href="mailto:info@celticelfes.com">info@celticelfes.com</a> to inquire about
+Contact us by e-mail at <a href="mailto:info@celticelfes.com">info@celticelfes.com</a> to inquire about
 availability and pricing.</p>
 <h5><a name="dr">Devon Rex</a></h5>
  <p>A bit about Devon Rex breed:<br/>
@@ -115,21 +117,13 @@ The Devon Rex is a faithful companion and will usually follow the object of thei
 </div>
 <div id="footer-container">
 <div id="footer">
-	<div class="fb-like" data-href="http://www.celticelfes.com" data-send="true" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
 <table>
-<tr style="background-color:#333; font-size:15px; height:15px">
-
-<!-- anchor to top of page -->
-<td>&copy; 2012 Celtic Elfes</td>
-<td>
-<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
-Send mail to us</a></td>
-<td>
-<div class="fb-like" data-href="http://www.celticelfes.com" data-send="true" data-width="450" data-show-faces="true"></div>
-</td>
+<tr>
+<td>&copy; 2012 Celticelfes</td>
+<td><a href="mailto:info@celticelfes.com?Subject=Devon%20Rex">Send mail to us</a></td>
+<td><div class="fb-like" data-href="http://www.celticelfes.com" data-send="true" data-width="450" data-show-faces="false"></div></td>
 <td align="right">Designed by alien_masha</td>
 </tr>
-
 </table>
 </div>
 </div>
