--- a/gallery.html
+++ b/gallery.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
-<title>Devon Rex Ireland | Gallery</title>
+<meta name="description" content="Breeder of pedigree Devon Rex cats in Ireland" />
+<title>Celticelfes Gallery | Pedigree Devon Rex kittens for sale in Ireland</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -33,6 +33,14 @@
 </head>
 
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div id="main">
 <!-- anythink in the body is displayed on the webpage-->
 <!-- need to put in the picture and logo on top of the table-->
@@ -86,24 +94,15 @@
 
 </div>
 
-<div id="footer-container">
+<<div id="footer-container">
 <div id="footer">
 <table>
-<tr style="background-color:#333; font-size:15px; height:15px">
-
-<!-- anchor to top of page -->
-<td>&copy; 2012 Celtic Elfes</td>
-<td>
-<a href="mailto:erikalast2006@yahoo.com?Subject=Devon%20Rex">
-Send mail to us</a></td>
-<td>
-<a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
-<img border="0" src="images/fb.jpg" alt="FB" />
-</a>
-</td>
+<tr>
+<td>&copy; 2012 Celticelfes</td>
+<td><a href="mailto:info@celticelfes.com?Subject=Devon%20Rex">Send mail to us</a></td>
+<td><div class="fb-like" data-href="http://www.celticelfes.com" data-send="true" data-width="450" data-show-faces="false"></div></td>
 <td align="right">Designed by alien_masha</td>
 </tr>
-
 </table>
 </div>
 </div>
